..F....... [ZBXNEXT-5036] fixed css class names for high contrast themes

--- a/frontends/php/assets/styles/hc-dark.css
+++ b/frontends/php/assets/styles/hc-dark.css
@@ -4725,17 +4725,17 @@ svg {
   .timeline-axis::before {
     background-color: #b2b2b2 !important; }
 
-.action-menu {
+.menu-popup {
   background-color: #383838;
   border: 1px solid #666; }
-  .action-menu .action-menu-item-disabled {
+  .menu-popup .menu-popup-item-disabled {
     color: #7d7d7d; }
-  .action-menu .action-menu-item:hover, .action-menu .action-menu-item:focus, .action-menu .action-menu-item:active, .action-menu .action-menu-item.highlighted {
+  .menu-popup .menu-popup-item:hover, .menu-popup .menu-popup-item:focus, .menu-popup .menu-popup-item:active, .menu-popup .menu-popup-item.highlighted {
     background-color: black;
     color: white; }
-    .action-menu .action-menu-item:hover .arrow-right, .action-menu .action-menu-item:focus .arrow-right, .action-menu .action-menu-item:active .arrow-right, .action-menu .action-menu-item.highlighted .arrow-right {
+    .menu-popup .menu-popup-item:hover .arrow-right, .menu-popup .menu-popup-item:focus .arrow-right, .menu-popup .menu-popup-item:active .arrow-right, .menu-popup .menu-popup-item.highlighted .arrow-right {
       border-left-color: white; }
-  .action-menu .action-menu-item.selected::before {
+  .menu-popup .menu-popup-item.selected::before {
     background: url(../img/icon-sprite.svg) no-repeat -317px -835px; }
 
 ul.top-nav-icons input {
