--- a/frontends/php/assets/styles/hc-light.css
+++ b/frontends/php/assets/styles/hc-light.css
@@ -4700,16 +4700,16 @@ svg {
   .timeline-axis::before {
     background-color: #272727 !important; }
 
-.action-menu .action-menu-item-disabled {
+.menu-popup .menu-popup-item-disabled {
   color: #9f9f9f; }
-.action-menu .action-menu-item:hover, .action-menu .action-menu-item:focus, .action-menu .action-menu-item:active, .action-menu .action-menu-item.highlighted {
+.menu-popup .menu-popup-item:hover, .menu-popup .menu-popup-item:focus, .menu-popup .menu-popup-item:active, .menu-popup .menu-popup-item.highlighted {
   background-color: black;
   color: white; }
-  .action-menu .action-menu-item:hover .arrow-right, .action-menu .action-menu-item:focus .arrow-right, .action-menu .action-menu-item:active .arrow-right, .action-menu .action-menu-item.highlighted .arrow-right {
+  .menu-popup .menu-popup-item:hover .arrow-right, .menu-popup .menu-popup-item:focus .arrow-right, .menu-popup .menu-popup-item:active .arrow-right, .menu-popup .menu-popup-item.highlighted .arrow-right {
     border-left-color: white; }
-  .action-menu .action-menu-item:hover.selected::before, .action-menu .action-menu-item:focus.selected::before, .action-menu .action-menu-item:active.selected::before, .action-menu .action-menu-item.highlighted.selected::before {
+  .menu-popup .menu-popup-item:hover.selected::before, .menu-popup .menu-popup-item:focus.selected::before, .menu-popup .menu-popup-item:active.selected::before, .menu-popup .menu-popup-item.highlighted.selected::before {
     background: url(../img/icon-sprite.svg) no-repeat -317px -835px; }
-.action-menu .action-menu-item.selected::before {
+.menu-popup .menu-popup-item.selected::before {
   background: url(../img/icon-sprite.svg) no-repeat -164px -835px; }
 
 ul.top-nav-icons input {
